# neuralNetwork

./: ActivationFunction.cpp  ActivationFunction.h  CMakeLists.txt  Cost.cpp  Cost.h  NeuralNetwork.cpp  NeuralNetwork.h  README.md  TrainingData.cpp  TrainingData.h  main.cpp  readme.md
docs/: index.html  neural_network.js  neural_network.wasm
imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_opengl3_loader.h  imgui_internal.h  imgui_tables.cpp  imstb_truetype.h
rendering/: Graph.cpp  Graph.h  NetworkHandler.cpp  NetworkHandler.h  Renderer.cpp  Renderer.h
